fixed vertical-align and background hotels

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ a {
 }
 
 .body-hotels {
-  background-color: #ffffff;
+  background-color: #f2f2f2;
   -webkit-filter: none;
           filter: none;
 }
@@ -1178,6 +1178,7 @@ a {
   line-height: 26px;
   color: #000000;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .results-item-face:hover, .results-item-face:focus {
